<resources>

    <string name="app_name">LiveBTC</string>
    <string name="wallpaper_label">LiveBTC</string>
    <string name="prefs_label">Settings</string>
    <string name="prefs_margin_message">Enter a number between 0 and 30</string>
    <string name="prefs_bottom_margin_title">Bottom margin</string>
    <string name="prefs_bottom_margin_summary">Percent margin between chart and bottom of screen</string>
    <string name="prefs_top_margin_title">Top margin</string>
    <string name="prefs_top_margin_summary">Percent margin between chart and top of screen</string>
    <string name="prefs_time_interval_title">Time interval</string>
    <string name="prefs_time_interval_summary">Period of time between each point on the graph</string>
    <string name="prefs_num_points_summary">Number of points to show at the given time interval</string>
    <string name="prefs_num_points_title">Number of points</string>
    <string name="prefs_currency_title">Currency</string>
    <string name="prefs_currency_summary">Select a currency</string>
    <string name="prefs_bkgd_color_summary">Select a background color</string>
    <string name="prefs_bkgd_color_title">Background color</string>
    <string name="prefs_line_color_summary">Select a line color</string>
    <string name="prefs_line_color_title">Line color</string>
    <string name="prefs_advanced_colors_title">Use advanced colors</string>
    <string name="prefs_advanced_color_message">Enter a hexadecimal color code. Must be exactly 6 digits long.</string>
    <string name="prefs_advanced_line_color_summary">Hex code for line color</string>
    <string name="prefs_advanced_background_summary">Hex code for background color</string>

    <string-array name="prefs_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="prefs_currency_entries">
        <item>USD</item>
        <item>EUR</item>
        <item>CNY</item>
        <item>GBP</item>
        <item>CAD</item>
    </string-array>
    <string-array name="prefs_time_interval_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="prefs_time_interval_entries">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="prefs_num_points_entries">
        <item>8</item>
        <item>16</item>
        <item>24</item>
    </string-array>
    <string-array name="forty_min_span">
        <item>0m</item>
        <item>10m</item>
        <item>20m</item>
        <item>30m</item>
        <item>40m</item>
    </string-array>
    <string-array name="one_hour_twenty_min_span">
        <item>0m</item>
        <item>20m</item>
        <item>40m</item>
        <item>1h</item>
        <item>1h 20m</item>
    </string-array>
    <string-array name="two_hour_span">
        <item>0m</item>
        <item>30m</item>
        <item>1h</item>
        <item>1h 30m</item>
        <item>2h</item>
    </string-array>
    <string-array name="four_hour_span">
        <item>0h</item>
        <item>1h</item>
        <item>2h</item>
        <item>3h</item>
        <item>4h</item>
    </string-array>
    <string-array name="six_hour_span">
        <item>0h</item>
        <item>1h 30m</item>
        <item>3h</item>
        <item>4h 30m</item>
        <item>6h</item>
    </string-array>
    <string-array name="eight_hour_span">
        <item>0h</item>
        <item>2h</item>
        <item>4h</item>
        <item>6h</item>
        <item>8h</item>
    </string-array>
    <string-array name="twelve_hour_span">
        <item>0h</item>
        <item>3h</item>
        <item>6h</item>
        <item>9h</item>
        <item>12h</item>
    </string-array>
    <string-array name="sixteen_hour_span">
        <item>0h</item>
        <item>4h</item>
        <item>8h</item>
        <item>12h</item>
        <item>16h</item>
    </string-array>
    <string-array name="twenty_four_hour_span">
        <item>0h</item>
        <item>6h</item>
        <item>12h</item>
        <item>18h</item>
        <item>24h</item>
    </string-array>

</resources>