<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="wallpaper_settings"
    android:title="@string/prefs_label" >

    <ListPreference
        android:defaultValue="USD"
        android:entries="@array/prefs_currency_entries"
        android:entryValues="@array/prefs_currency_entries"
        android:key="currency"
        android:summary="@string/prefs_currency_summary"
        android:title="@string/prefs_currency_title" >
    </ListPreference>
    <ListPreference
        android:defaultValue="30"
        android:entries="@array/prefs_time_interval_entries"
        android:entryValues="@array/prefs_time_interval_values"
        android:key="time_interval"
        android:summary="@string/prefs_time_interval_summary"
        android:title="@string/prefs_time_interval_title" />
    <ListPreference
        android:defaultValue="16"
        android:entries="@array/prefs_num_points_entries"
        android:entryValues="@array/prefs_num_points_entries"
        android:key="num_points"
        android:summary="@string/prefs_num_points_summary"
        android:title="@string/prefs_num_points_title" />
    <ListPreference
        android:defaultValue="White"
        android:entries="@array/prefs_colors"
        android:entryValues="@array/prefs_colors"
        android:key="basic_line_color"
        android:summary="@string/prefs_line_color_summary"
        android:title="@string/prefs_line_color_title" />
    <ListPreference
        android:defaultValue="Black"
        android:entries="@array/prefs_colors"
        android:entryValues="@array/prefs_colors"
        android:key="basic_background_color"
        android:summary="@string/prefs_bkgd_color_summary"
        android:title="@string/prefs_bkgd_color_title" />

    <EditTextPreference
        android:defaultValue="1"
        android:dialogMessage="@string/prefs_margin_message"
        android:dialogTitle="@string/prefs_top_margin_title"
        android:key="top_margin"
        android:summary="@string/prefs_top_margin_summary"
        android:title="@string/prefs_top_margin_title" />
    <EditTextPreference
        android:defaultValue="1"
        android:dialogMessage="@string/prefs_margin_message"
        android:dialogTitle="@string/prefs_bottom_margin_title"
        android:key="bottom_margin"
        android:summary="@string/prefs_bottom_margin_summary"
        android:title="@string/prefs_bottom_margin_title" />

    <PreferenceScreen
        android:key="advanced_settings"
        android:persistent="false"
        android:title="Advanced Settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="override_basic_colors"
            android:title="@string/prefs_advanced_colors_title" />

        <EditTextPreference
            android:defaultValue="FF6600"
            android:dependency="override_basic_colors"
            android:dialogMessage="@string/prefs_advanced_color_message"
            android:dialogTitle="@string/prefs_line_color_title"
            android:key="advanced_line"
            android:summary="@string/prefs_advanced_line_color_summary"
            android:title="@string/prefs_line_color_title" />
        <EditTextPreference
            android:defaultValue="75A3FF"
            android:dependency="override_basic_colors"
            android:dialogMessage="@string/prefs_advanced_color_message"
            android:dialogTitle="@string/prefs_bkgd_color_title"
            android:key="advanced_background"
            android:summary="@string/prefs_advanced_background_summary"
            android:title="@string/prefs_bkgd_color_title" />
    </PreferenceScreen>

</PreferenceScreen>